# unity-adm-support-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  package.cmake.in
UnityAdmProject/: .gitignore
UnityAdmProject/Assets/: Main.unity  OutputAudioRecorder.cs  Packaging.cs  SimpleCameraController.cs
UnityAdmProject/Assets/UnityAdm/: LICENSE  UnityAdm.cs  implementation.md  readme.txt
UnityAdmProject/Assets/UnityAdm/Editor/: EditorUtils.cs  UnityAdmEditor.cs
UnityAdmProject/Assets/UnityAdm/Scripts/: AudioRendering.cs  AudioRenderingBear.cs  AudioRenderingUnity.cs  DebugSettings.cs  GameObjectHandler.cs  GlobalState.cs  Helpers.cs  LibraryInterface.cs  MetadataHandler.cs  OpenVrWrapper.cs  UnityAdmFilterComponent.cs
UnityAdmProject/Assets/prefabs/: HOA.prefab  Object.prefab  Speaker.prefab  blue.mat  green.mat  red.mat
UnityAdmProject/ProjectSettings/: ProjectSettings.asset
dummy_cmake_modules/: CPack.cmake
src/: Audio.cpp  Audio.h  BearRender.cpp  BearRender.h  CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.h  Helpers.h  Metadata.cpp  Metadata.h  Readers.cpp  Readers.h  main.cpp  main.h
submodules/: CMakeLists.txt
